(*NumCitizens) removed while loops (setHotPointFinished) Now accepts index or hotpoint